# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../../multimedia_camera_framework.gni")

module_output_path = "camera_framework/camera_framework/camera_common_utils_test"

ohos_unittest("camera_common_utils_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./include"
  ]

  sources = [
    "./src/camera_common_utils_unittest.cpp"
  ]

    deps = [
    "${multimedia_camera_framework_path}/common:camera_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "resource_management:librawfile",
    "safwk:system_ability_fwk",
  ]

  defines = [ "private=public" ]

  cflags = [
    "-fPIC",
    "-Werror=unused",
    "-fno-access-control",
  ]
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cflags_cc = cflags
}
