# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("./../../../multimedia_camera_framework.gni")

module_output_path = "camera_framework/camera_framework/camera_common_utils_test"

ohos_unittest("camera_common_utils_test") {
  module_out_path = module_output_path
  include_dirs = [
    "./include",
    "${multimedia_camera_framework_path}/dynamic_libs/av_codec/include",
    "${multimedia_camera_framework_path}/dynamic_libs/image_framework/include",
    "${multimedia_camera_framework_path}/dynamic_libs/media_library/include",
  ]

  public_configs = [
    "${multimedia_camera_framework_path}/common:camera_utils_config",
    "${multimedia_camera_framework_path}/dynamic_libs:camera_dynamic_moving_photo_public_config",
    "${multimedia_camera_framework_path}/dynamic_libs:camera_dynamic_media_manager_public_config",
  ]
  sources = [
    "./src/camera_common_utils_unittest.cpp",
    "./src/camera_hdi_const_unittest.cpp"
  ]

    deps = [
    "${multimedia_camera_framework_path}/common:camera_utils",
    "//foundation/multimedia/camera_framework/dynamic_libs:camera_dynamic_avcodec",
    "//foundation/multimedia/camera_framework/dynamic_libs:camera_dynamic_media_manager",
    "//foundation/multimedia/camera_framework/dynamic_libs:camera_dynamic_medialibrary",
    "//foundation/multimedia/camera_framework/dynamic_libs:camera_dynamic_moving_photo",
    "//foundation/multimedia/camera_framework/dynamic_libs:camera_dynamic_picture",
  ]

  external_deps = [
    "av_codec:av_codec_client",
    "av_codec:av_codec_media_engine_modules",
    "av_codec:native_media_acodec",
    "av_codec:native_media_codecbase",
    "c_utils:utils",
    "drivers_interface_camera:metadata",
    "googletest:gmock_main",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "image_framework:image_native",
    "ipc:ipc_core",
    "media_library:media_library_camera_helper",
    "resource_management:librawfile",
    "safwk:system_ability_fwk",
  ]

  defines = [ "private=public" ]

  cflags = [
    "-fPIC",
    "-Werror=unused",
    "-fno-access-control",
  ]
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  cflags_cc = cflags
}
