# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/components/ets_frontend/ets2abc_config.gni")
import("//build/ohos.gni")
import("./../../../multimedia_camera_framework.gni")

group("camera_framework_ani") {
  deps = [
    ":camera_ani",
    ":camera_etc",
  ]
}

ohos_shared_library("camera_ani") {
  include_dirs = [
    "include",
    "${multimedia_camera_framework_path}/common/utils",
    "${multimedia_camera_framework_path}/interfaces/inner_api/native/camera/include",
    "${multimedia_camera_framework_path}/services/camera_service/include",
    "${multimedia_camera_framework_path}/frameworks/native/camera/include",
    "${multimedia_camera_framework_path}/services/camera_service/binder/base/include/",
    "${multimedia_camera_framework_path}/services/camera_service/binder/client/include",
    "${multimedia_camera_framework_path}/services/camera_service/binder/server/include",
  ]

  sources = [
    "src/ani_module_camera.cpp",
    "src/camera_manager_ani.cpp",
    "src/camera_security_utils_ani.cpp",
    "src/camera_utils_ani.cpp",
  ]

  deps = [
    "${multimedia_camera_framework_path}/common:camera_utils",
    "${multimedia_camera_framework_path}/frameworks/native/camera:camera_framework",
  ]

  external_deps = [
    "c_utils:utils",
    "graphic_surface:surface",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "hilog:libhilog",
    "image_framework:image",
    "ipc:ipc_core",
    "runtime_core:ani",
    "runtime_core:libarkruntime",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  subsystem_name = "multimedia"
  part_name = "camera_framework"
  output_extension = "so"
}

generate_static_abc("camera") {
  base_url = "./ets"
  files = [ "./ets/@ohos.multimedia.camera.ets" ]
  is_boot_abc = "True"
  device_dst_file = "/system/framework/camera.abc"
}

ohos_prebuilt_etc("camera_etc") {
  source = "$target_out_dir/camera.abc"
  module_install_dir = "framework"
  subsystem_name = "multimedia"
  part_name = "camera_framework"
  deps = [ ":camera" ]
}
