# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../../../multimedia_camera_framework.gni")

config("camera_framework_public_config") {
  include_dirs = [
    "//foundation/multimedia/camera_framework/interfaces/inner_api/native/camera/include",
    "//foundation/multimedia/camera_framework/interfaces/inner_api/native/camera/include/input",
    "//foundation/multimedia/camera_framework/interfaces/inner_api/native/camera/include/output",
    "//foundation/multimedia/camera_framework/interfaces/inner_api/native/camera/include/session",
    "${multimedia_camera_framework_path}/interfaces/inner_api/native/camera/include/deferred_proc_session",
    "${multimedia_camera_framework_path}/interfaces/inner_api/native/camera/include/utils",
    "../interfaces/inner_api/native/camera/include/mode",
    "../../../interfaces/inner_api/native/camera/include/utils",
  ]
}

config("camera_framework_local_config") {
  include_dirs = [
    "//foundation/multimedia/camera_framework/services/camera_service/include",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/base/include",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/client/include",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/server/include",
    "//foundation/multimedia/camera_framework/interfaces/inner_api/native/camera/include",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/include",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/include/base",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/include/utils",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/binder/base/include",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/binder/client/include",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/binder/server/include",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/include/session",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/include/session/photo_session",
  ]
}

config("camera_framework_drivers_config") {
  include_dirs = [
    "//drivers/peripheral/camera/interfaces/include",
    "//drivers/peripheral/camera/interfaces/hdi_ipc",
    "//drivers/peripheral/camera/interfaces/hdi_ipc/server",
  ]
}

ohos_shared_library("camera_framework") {
  branch_protector_ret = "pac_ret"
  install_enable = true
  sources = [
    "${multimedia_camera_framework_path}/services/deferred_processing_service/binder/client/src/deferred_photo_processing_session_callback_proxy.cpp",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/binder/client/src/deferred_photo_processing_session_proxy.cpp",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/binder/server/src/deferred_photo_processing_session_callback_stub.cpp",
    "${multimedia_camera_framework_path}/services/deferred_processing_service/binder/server/src/deferred_photo_processing_session_stub.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/base/src/icamera_util.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/client/src/hcamera_device_proxy.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/client/src/hcamera_service_proxy.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/client/src/hcapture_session_proxy.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/client/src/hstream_capture_proxy.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/client/src/hstream_metadata_proxy.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/client/src/hstream_repeat_proxy.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/server/src/hcamera_device_callback_stub.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/server/src/hcamera_listener_stub.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/server/src/hcamera_service_callback_stub.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/server/src/hcapture_session_callback_stub.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/server/src/hstream_capture_callback_stub.cpp",
    "//foundation/multimedia/camera_framework/services/camera_service/binder/server/src/hstream_repeat_callback_stub.cpp",
    "src/deferred_proc_session/deferred_photo_proc_session.cpp",
    "src/input/camera_device.cpp",
    "src/input/camera_input.cpp",
    "src/input/camera_manager.cpp",
    "src/input/prelaunch_config.cpp",
    "src/output/camera_output_capability.cpp",
    "src/output/capture_output.cpp",
    "src/output/deferred_photo_proxy.cpp",
    "src/output/metadata_output.cpp",
    "src/output/photo_output.cpp",
    "src/output/preview_output.cpp",
    "src/output/sketch_wrapper.cpp",
    "src/output/video_output.cpp",
    "src/session/capture_session.cpp",
    "src/session/features/moon_capture_boost_feature.cpp",
    "src/session/high_res_photo_session.cpp",
    "src/session/macro_photo_session.cpp",
    "src/session/macro_video_session.cpp",
    "src/session/night_session.cpp",
    "src/session/photo_session.cpp",
    "src/session/portrait_session.cpp",
    "src/session/profession_session.cpp",
    "src/session/scan_session.cpp",
    "src/session/secure_camera_session.cpp",
    "src/session/slow_motion_session.cpp",
    "src/session/video_session.cpp",
    "src/utils/camera_buffer_handle_utils.cpp",
    "src/utils/camera_security_utils.cpp",
    "src/utils/dps_metadata_info.cpp",
    "src/utils/metadata_common_utils.cpp",
  ]

  cflags = [
    "-fPIC",
    "-Wall",
    "-DSUPPORT_CAMERA_AUTH",
  ]
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }

  public_configs = [
    ":camera_framework_public_config",
    ":camera_framework_local_config",
    ":camera_framework_drivers_config",
  ]

  include_dirs = [
    "${graphic_surface_path}/surface/include",
    "${graphic_2d_path}/utils/buffer_handle/export",
    "//utils/system/safwk/native/include",
    "${window_manager_path}/interfaces/innerkits/dm",
  ]

  external_deps = [
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "drivers_interface_camera:libbuffer_handle_sequenceable_1.0",
    "drivers_interface_camera:libcamera_proxy_1.0",
    "drivers_interface_camera:libcamera_proxy_1.1",
    "drivers_interface_camera:libcamera_proxy_1.2",
    "drivers_interface_camera:libcamera_proxy_1.3",
    "drivers_interface_camera:libmap_data_sequenceable_1.0",
    "drivers_interface_camera:metadata",
    "drivers_interface_display:display_commontype_idl_headers",
    "graphic_2d:librender_service_client",
    "graphic_surface:surface",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "image_framework:image",
    "image_framework:image_native",
    "ipc:ipc_core",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "window_manager:libdm",
  ]

  defines = []
  if (use_sensor) {
    external_deps += [ "sensor:sensor_interface_native" ]
    defines += [ "CAMERA_USE_SENSOR" ]
  }

  cflags_cc = cflags
  innerapi_tags = [ "platformsdk" ]
  part_name = "camera_framework"
  subsystem_name = "multimedia"
}
